<?xml version="1.0" encoding="utf-8"?>
<!--
   *********************************
   MADE BY OSID ABU-ALRUB (1183096)
   *********************************
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/osid_toolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/osid_textViewToolBarTitle"
            android:text="@string/osid_textViewRegisterToolBarText"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="15dp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/osid_universalPadding">

            <TextView
                style="@style/osid_textViewTitle"
                android:text="@string/app_name"
                android:id="@+id/textViewTitle"
                 />

            <EditText
                android:id="@+id/editTextUsername"
                style="@style/osid_editTextStyle"
                android:hint="@string/osid_editTextUserName"
                android:layout_marginTop="50dp"
                android:layout_below="@id/textViewTitle"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextUsername"
                android:id="@+id/textViewUserNameRulesLength"
                android:text="*length between 3 and 30"
                />


            <EditText
                android:id="@+id/editTextPassword"
                style="@style/osid_editTextStyle"
                android:hint="@string/osid_editTextPassword"
                android:layout_below="@id/textViewUserNameRulesLength"
                android:layout_marginTop="30dp"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextPassword"
                android:id="@+id/textViewPasswordRulesNumeric"
                android:text="*must contain one number"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewPasswordRulesNumeric"
                android:id="@+id/textViewPasswordRulesLowercase"
                android:text="*must contain lowercase character"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewPasswordRulesLowercase"
                android:id="@+id/textViewPasswordRulesUppercase"
                android:text="*must contain one uppercase character"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewPasswordRulesUppercase"
                android:id="@+id/textViewPasswordRulesLength"
                android:text="*length between 5 and 30"
                />

            <EditText
                android:id="@+id/editTextFirstName"
                style="@style/osid_editTextStyle"
                android:hint="@string/osid_editTextFirstName"
                android:layout_below="@id/textViewPasswordRulesUppercase"
                android:layout_marginTop="30dp"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextFirstName"
                android:id="@+id/textViewFirstNameRulesEnglishCharacters"
                android:text="*only english letters"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewFirstNameRulesEnglishCharacters"
                android:id="@+id/textViewFirstNameRulesLength"
                android:text="*length between 2 and 15"
                />


            <EditText
                android:id="@+id/editTextLastName"
                style="@style/osid_editTextStyle"
                android:hint="@string/osid_editTextLastName"
                android:layout_below="@id/textViewFirstNameRulesLength"
                android:layout_marginTop="30dp"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextLastName"
                android:id="@+id/textViewLastNameRulesEnglishCharacters"
                android:text="*only english letters"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewLastNameRulesEnglishCharacters"
                android:id="@+id/textViewLastNameRulesLength"
                android:text="*length between 2 and 15"
                />


            <EditText
                android:id="@+id/editTextEmail"
                style="@style/osid_editTextStyle"
                android:hint="@string/osid_editTextEmail"
                android:layout_below="@id/textViewLastNameRulesLength"
                android:layout_marginTop="30dp"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextEmail"
                android:id="@+id/textViewEmailRules"
                android:text="*person@example.com"
                />


            <EditText
                android:id="@+id/editTextPhoneNumber"
                style="@style/osid_editTextStyle"
                android:hint="@string/osid_editTextPhoneNumber"
                android:layout_below="@id/textViewEmailRules"
                android:layout_marginTop="30dp"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextPhoneNumber"
                android:id="@+id/textViewPhoneNumberRules"
                android:text="*person@example.com"
                />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_below="@id/textViewPhoneNumberRules"
                android:layout_centerHorizontal="true"
                android:onClick="buttonRegisterHandleClick"
                android:layout_marginTop="30dp"
                android:text="@string/osid_buttonRegister"
                style="@style/osid_buttonStyle" />

            <TextView
                android:id="@+id/textViewCreateAccount"
                android:text="@string/osid_textViewLoginToAccount"
                android:layout_below="@id/buttonRegister"
                android:layout_centerHorizontal="true"
                android:onClick="textViewLoginHandleClick"
                style="@style/osid_textViewLoginOrRegister" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>